--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -74,16 +75,16 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-      - family: Poppins
-      - fonts:
-          - asset: fonts/Popinns-Bold.ttf
-            weight: 700
-          - asset: fonts/Popinns-SemiBold.ttf
-            weight: 600
-          - asset: fonts/Popinns-Medium.ttf
-            weight: 500
-          - asset: fonts/Popinns-Regular.ttf
-            weight: 400
+    - family: Poppins
+      fonts:
+      - asset: assets/fonts/Poppins-Bold.ttf
+        weight: 700
+      - asset: assets/fonts/Poppins-SemiBold.ttf
+        weight: 600
+      - asset: assets/fonts/Poppins-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/Poppins-Regular.ttf
+        weight: 400
   
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
